--- a/deploy/charts/airlock-microgateway/crds/denyrules.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/denyrules.microgateway.airlock.com.yaml
@@ -2,10 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.16.4
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.3.4
+    app.kubernetes.io/version: 4.4.0
   name: denyrules.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -864,7 +864,9 @@ spec:
                                     TEMPLATE |
                                     UNIXCMD |
                                     WINCMD |
-                                    XSS
+                                    XSS |
+                                    SSRF |
+                                    BOT
                                   enum:
                                     - ENCODING
                                     - EXPLOIT
@@ -883,6 +885,8 @@ spec:
                                     - UNIXCMD
                                     - WINCMD
                                     - XSS
+                                    - SSRF
+                                    - BOT
                                   type: string
                                 minItems: 1
                                 type: array
@@ -917,7 +921,9 @@ spec:
                                         TEMPLATE |
                                         UNIXCMD |
                                         WINCMD |
-                                        XSS
+                                        XSS |
+                                        SSRF |
+                                        BOT
                                       enum:
                                         - ENCODING
                                         - EXPLOIT
@@ -936,6 +942,8 @@ spec:
                                         - UNIXCMD
                                         - WINCMD
                                         - XSS
+                                        - SSRF
+                                        - BOT
                                       type: string
                                     minItems: 1
                                     type: array
