--- a/deploy/charts/airlock-microgateway/crds/identitypropagations.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/identitypropagations.microgateway.airlock.com.yaml
@@ -2,10 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.16.4
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.3.4
+    app.kubernetes.io/version: 4.4.0
   name: identitypropagations.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -47,6 +47,48 @@ spec:
             spec:
               description: Specification of the desired identity propagation.
               properties:
+                bearerToken:
+                  description: BearerToken configures identity propagation via an authorization header containing a bearer token.
+                  properties:
+                    source:
+                      description: Source from which to extract the token.
+                      properties:
+                        metadata:
+                          description: Metadata specifies to extract a value from an Envoy dynamic filter metadata key.
+                          properties:
+                            key:
+                              description: Key specifies the metadata key from which to load the value, e.g. `some_payload.aud`.
+                              minLength: 1
+                              type: string
+                            namespace:
+                              description: Namespace specifies the metadata namespace within which the lookup should be performed, e.g. `envoy.filters.http.jwt_authn`.
+                              minLength: 1
+                              type: string
+                          required:
+                            - key
+                            - namespace
+                          type: object
+                        oidc:
+                          description: OIDC specifies to extract a value from the result of an OpenID Connect flow.
+                          properties:
+                            accessToken:
+                              description: AccessToken specifies to extract the value from the OpenID Connect Access Token.
+                              type: object
+                            idToken:
+                              description: IDToken specifies to extract the value from the OpenID Connect ID Token.
+                              properties:
+                                claim:
+                                  description: Claim selects the JWT claim from which to extract the value.
+                                  minLength: 1
+                                  type: string
+                              required:
+                                - claim
+                              type: object
+                          type: object
+                      type: object
+                  required:
+                    - source
+                  type: object
                 header:
                   description: Header configures identity propagation via a request header.
                   properties:
@@ -78,6 +120,9 @@ spec:
                             oidc:
                               description: OIDC specifies to extract a value from the result of an OpenID Connect flow.
                               properties:
+                                accessToken:
+                                  description: AccessToken specifies to extract the value from the OpenID Connect Access Token.
+                                  type: object
                                 idToken:
                                   description: IDToken specifies to extract the value from the OpenID Connect ID Token.
                                   properties:
@@ -88,8 +133,6 @@ spec:
                                   required:
                                     - claim
                                   type: object
-                              required:
-                                - idToken
                               type: object
                           type: object
                       required:
