--- a/deploy/charts/airlock-microgateway/crds/oidcproviders.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/oidcproviders.microgateway.airlock.com.yaml
@@ -2,10 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.16.4
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.3.4
+    app.kubernetes.io/version: 4.4.0
   name: oidcproviders.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -28,19 +28,7 @@ spec:
           description: |-
             OIDCProvider specifies an OpenID Provider (OP).
 
-
-            {{% notice warning %}} The OIDC feature is currently in an experimental state.
-
-
-            We encourage you to try it out and give feedback, but be aware that we do not recommend using it in a production environment yet, as security has not yet been hardened.
-            In particular, the current implementation has the following limitations, which we intend to address in future Microgateway releases:
-              - The state parameter is guessable.
-              - Sessions are always shared across all Microgateway Engines using the same Redis instance.
-                I.e. if application A and B (with different SidecarGateways) have the same Redis instance configured in their SessionHandling CR, users which are logged into application A
-                may be able to access authenticated routes on application B, even if their OIDCRelyingParty configuration differs.
-
-
-            {{% /notice %}}
+            {{% notice info %}} The OIDC feature requires SessionHandling to be configured in the SidecarGateway. {{% /notice %}}
           properties:
             apiVersion:
               description: |-
@@ -83,6 +71,18 @@ spec:
                         token:
                           description: Token configures the endpoint from which the access, ID and refresh tokens are obtained.
                           properties:
+                            timeouts:
+                              description: Timeouts specifies the timeouts when interacting with the Token endpoint.
+                              properties:
+                                connect:
+                                  default: 5s
+                                  description: Connect specifies the timeout for establishing a connection.
+                                  type: string
+                                maxDuration:
+                                  default: 15s
+                                  description: MaxDuration specifies the response timeout.
+                                  type: string
+                              type: object
                             tls:
                               description: TLS defines TLS settings.
                               properties:
@@ -293,8 +293,45 @@ spec:
                         - authorization
                         - token
                       type: object
+                    issuer:
+                      description: Issuer specifies the unique identifier of the OIDC Provider, which is used e.g. for signature verification.
+                      format: uri
+                      minLength: 1
+                      pattern: ^(http|https)://.*$
+                      type: string
+                    tokenValidation:
+                      description: TokenValidation configures token validation.
+                      properties:
+                        idToken:
+                          description: IDToken configures validation for the OIDC ID Token.
+                          properties:
+                            signatureVerification:
+                              description: SignatureVerification specifies how to verify the ID Token signature.
+                              properties:
+                                disabled:
+                                  description: Disabled specifies to skip verification of the JWT signature. Not recommended for production environments.
+                                  type: object
+                                jwksRef:
+                                  description: JwksRef specifies the JWKS to use for verifying the JWT signature (usually provided by the OpenID Provider).
+                                  properties:
+                                    name:
+                                      description: Name of the resource
+                                      minLength: 1
+                                      type: string
+                                  required:
+                                    - name
+                                  type: object
+                              type: object
+                          required:
+                            - signatureVerification
+                          type: object
+                      required:
+                        - idToken
+                      type: object
                   required:
                     - endpoints
+                    - issuer
+                    - tokenValidation
                   type: object
               type: object
           required:
