--- a/deploy/charts/airlock-microgateway/crds/oidcrelyingparties.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/oidcrelyingparties.microgateway.airlock.com.yaml
@@ -2,10 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.16.4
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.3.4
+    app.kubernetes.io/version: 4.4.0
   name: oidcrelyingparties.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -28,19 +28,6 @@ spec:
           description: |-
             OIDCRelyingParty specifies how the Airlock Microgateway Engine interacts with an OpenID Provider (OP).
 
-
-            {{% notice warning %}} The OIDC feature is currently in an experimental state.
-
-
-            We encourage you to try it out and give feedback, but be aware that we do not recommend using it in a production environment yet, as security has not yet been hardened.
-            In particular, the current implementation has the following limitations, which we intend to address in future Microgateway releases:
-              - The state parameter is guessable.
-              - Sessions are always shared across all Microgateway Engines using the same Redis instance.
-                I.e. if application A and B (with different SidecarGateways) have the same Redis instance configured in their SessionHandling CR, users which are logged into application A
-                may be able to access authenticated routes on application B, even if their OIDCRelyingParty configuration differs.
-
-
-            {{% /notice %}}
             {{% notice info %}} The OIDC feature requires SessionHandling to be configured in the SidecarGateway. {{% /notice %}}
           properties:
             apiVersion:
@@ -96,6 +83,10 @@ spec:
                   required:
                     - clientSecret
                   type: object
+                flowTimeout:
+                  default: 5m
+                  description: FlowTimeout specifies the time window within which an initiated OIDC flow can be completed by the client.
+                  type: string
                 oidcProviderRef:
                   description: OIDCProviderRef selects the OpenID Provider (OP) used to authenticate users.
                   properties:
@@ -110,7 +101,10 @@ spec:
                   description: PathMapping configures the action matching.
                   properties:
                     logoutPath:
-                      description: LogoutPath specifies which request paths should initiate a logout.
+                      description: |-
+                        LogoutPath specifies which request paths should initiate a logout.
+
+                        WARNING: If the AccessControl policy referencing this OIDCRelyingParty has a request condition, you must currently ensure that it also matches these logout requests.
                       properties:
                         matcher:
                           description: StringMatcher defines the way to match a string.
@@ -155,7 +149,10 @@ spec:
                         - matcher
                       type: object
                     redirectPath:
-                      description: RedirectPath specifies which request paths should be interpreted as a response from the authorization endpoint.
+                      description: |-
+                        RedirectPath specifies which request paths should be interpreted as a callback redirect from the authorization endpoint.
+
+                        WARNING: If the AccessControl policy referencing this OIDCRelyingParty has a request condition, you must currently ensure that it also matches these callback redirect requests.
                       properties:
                         matcher:
                           description: StringMatcher defines the way to match a string.
@@ -206,9 +203,23 @@ spec:
                 redirectURI:
                   description: |-
                     RedirectURI configures the "redirect_uri" parameter included in the authorization request.
-                    May contain envoy command operators, e.g. '%REQ(:x-forwarded-proto)%://%REQ(:authority)%/callback'.
+                    May contain envoy command operators, e.g.: `%REQ(:x-forwarded-proto)%://%REQ(:authority)%/callback`
+
+                    WARNING: If the AccessControl policy referencing this OIDCRelyingParty has a request condition, you must currently
+                    ensure that it also matches requests to this URI.
                   minLength: 1
                   type: string
+                scopes:
+                  description: |-
+                    Scopes specifies the scopes to request during the OIDC flow.
+                    The mandatory `openid` scope is implicitly added to the list if not already present.
+                    Default: `['openid', 'profile']`
+
+                    Note: Different OIDCRelyingParties which use the same OIDC Provider and Client ID must request the same scopes for now.
+                  items:
+                    minLength: 1
+                    type: string
+                  type: array
               required:
                 - clientID
                 - credentials
