--- a/deploy/charts/airlock-microgateway/crds/redisproviders.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/redisproviders.microgateway.airlock.com.yaml
@@ -2,10 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.15.0
+    controller-gen.kubebuilder.io/version: v0.16.4
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.3.4
+    app.kubernetes.io/version: 4.4.0
   name: redisproviders.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -74,6 +74,63 @@ spec:
                 mode:
                   description: Mode configures the redis deployment mode.
                   properties:
+                    cluster:
+                      description: Cluster specifies the Redis Cluster to connect to.
+                      properties:
+                        nodes:
+                          description: Nodes specifies the Cluster nodes.
+                          items:
+                            properties:
+                              host:
+                                description: Host specifies the IP or hostname.
+                                minLength: 1
+                                pattern: ^(\d{1,3}(\.\d{1,3}){3}|([0-9a-fA-F]{1,4}|:)+(:\d{1,3}(\.\d{1,3}){3})?|[a-z0-9\-]+(\.[a-z0-9\-]+)*)$
+                                type: string
+                              port:
+                                default: 6379
+                                description: Port specifies the port.
+                                maximum: 65535
+                                minimum: 1
+                                type: integer
+                            required:
+                              - host
+                            type: object
+                          minItems: 1
+                          type: array
+                      required:
+                        - nodes
+                      type: object
+                    sentinel:
+                      description: Sentinel specifies the Redis Sentinels to connect to.
+                      properties:
+                        masterName:
+                          description: MasterName specifies the master name.
+                          minLength: 1
+                          type: string
+                        nodes:
+                          description: Nodes specifies the Sentinel nodes.
+                          items:
+                            properties:
+                              host:
+                                description: Host specifies the IP or hostname.
+                                minLength: 1
+                                pattern: ^(\d{1,3}(\.\d{1,3}){3}|([0-9a-fA-F]{1,4}|:)+(:\d{1,3}(\.\d{1,3}){3})?|[a-z0-9\-]+(\.[a-z0-9\-]+)*)$
+                                type: string
+                              port:
+                                default: 6379
+                                description: Port specifies the port.
+                                maximum: 65535
+                                minimum: 1
+                                type: integer
+                            required:
+                              - host
+                            type: object
+                          minItems: 1
+                          type: array
+                      required:
+                        - masterName
+                        - nodes
+                      type: object
                     standalone:
                       description: Standalone specifies the standalone Redis instance to connect to.
                       properties:
@@ -147,6 +204,22 @@ spec:
                         publicCAs:
                           description: PublicCAs specifies to only accept certificates with a SAN matching the host and which are signed by a CA which is either directly or indirectly trusted by any of the root CA certificates shipped with the Airlock Microgateway Session Agent’s base image.
                           type: object
+                      type: object
+                    clientCertificate:
+                      description: ClientCertificate configures client certificate authentication. If not specified, TLS-based client authentication is disabled.
+                      properties:
+                        secretRef:
+                          description: SecretRef specifies the client certificate to use (secret of type kubernetes.io/tls).
+                          properties:
+                            name:
+                              description: Name of the resource
+                              minLength: 1
+                              type: string
+                          required:
+                            - name
+                          type: object
+                      required:
+                        - secretRef
                       type: object
                   type: object
               required:
