--- a/deploy/charts/airlock-microgateway/tests/operator/dashboard_test.yaml
+++ b/deploy/charts/airlock-microgateway/tests/operator/dashboard_test.yaml
@@ -25,7 +25,7 @@ tests:
       dashboards.create: true
     asserts:
       - hasDocuments:
-          count: 4
+          count: 7
       - equal:
           path: metadata.name
           value: myoperator-microgateway-dashboard-blocklogs
@@ -36,12 +36,24 @@ tests:
         documentIndex: 1
       - equal:
           path: metadata.name
-          value: myoperator-microgateway-dashboard-license
+          value: myoperator-microgateway-dashboard-headerlogs
         documentIndex: 2
       - equal:
           path: metadata.name
-          value: myoperator-microgateway-dashboard-overview
+          value: myoperator-microgateway-dashboard-license
         documentIndex: 3
+      - equal:
+          path: metadata.name
+          value: myoperator-microgateway-dashboard-logonlylogs
+        documentIndex: 4
+      - equal:
+          path: metadata.name
+          value: myoperator-microgateway-dashboard-logonlymetrics
+        documentIndex: 5
+      - equal:
+          path: metadata.name
+          value: myoperator-microgateway-dashboard-overview
+        documentIndex: 6
 
   - it: should be possible to only enable license dashboard
     release:
@@ -55,6 +67,12 @@ tests:
           blockLogs:
             create: false
           blockMetrics:
+            create: false
+          headerLogs:
+            create: false
+          logOnlyMetrics:
+            create: false
+          logOnlyLogs:
             create: false
     asserts:
       - hasDocuments:
@@ -76,6 +94,12 @@ tests:
             create: false
           license:
             create: false
+          headerLogs:
+            create: false
+          logOnlyMetrics:
+            create: false
+          logOnlyLogs:
+            create: false
     asserts:
       - hasDocuments:
           count: 1
@@ -96,12 +120,44 @@ tests:
             create: false
           blockMetrics:
             create: false
+          headerLogs:
+            create: false
+          logOnlyMetrics:
+            create: false
+          logOnlyLogs:
+            create: false
     asserts:
       - hasDocuments:
           count: 1
       - equal:
           path: metadata.name
           value: myoperator-microgateway-dashboard-overview
+
+  - it: should be possible to only enable headerLogs dashboard
+    release:
+      name: myoperator
+    set:
+      dashboards:
+        create: true
+        instances:
+          overview:
+            create: false
+          license:
+            create: false
+          blockLogs:
+            create: false
+          blockMetrics:
+            create: false
+          logOnlyMetrics:
+            create: false
+          logOnlyLogs:
+            create: false
+    asserts:
+      - hasDocuments:
+          count: 1
+      - equal:
+          path: metadata.name
+          value: myoperator-microgateway-dashboard-headerlogs
 
   - it: should be possible to only enable blockLogs dashboard
     release:
@@ -116,12 +172,70 @@ tests:
             create: false
           blockMetrics:
             create: false
+          headerLogs:
+            create: false
+          logOnlyMetrics:
+            create: false
+          logOnlyLogs:
+            create: false
     asserts:
       - hasDocuments:
           count: 1
       - equal:
           path: metadata.name
           value: myoperator-microgateway-dashboard-blocklogs
+
+  - it: should be possible to only enable logOnlyMetrics dashboard
+    release:
+      name: myoperator
+    set:
+      dashboards:
+        create: true
+        instances:
+          license:
+            create: false
+          overview:
+            create: false
+          blockMetrics:
+            create: false
+          headerLogs:
+            create: false
+          blockLogs:
+            create: false
+          logOnlyLogs:
+            create: false
+    asserts:
+      - hasDocuments:
+          count: 1
+      - equal:
+          path: metadata.name
+          value: myoperator-microgateway-dashboard-logonlymetrics
+
+  - it: should be possible to only enable logOnlyLogs dashboard
+    release:
+      name: myoperator
+    set:
+      dashboards:
+        create: true
+        instances:
+          license:
+            create: false
+          overview:
+            create: false
+          blockMetrics:
+            create: false
+          headerLogs:
+            create: false
+          blockLogs:
+            create: false
+          logOnlyMetrics:
+            create: false
+    asserts:
+      - hasDocuments:
+          count: 1
+      - equal:
+          path: metadata.name
+          value: myoperator-microgateway-dashboard-logonlylogs
 
   - it: should set grafana label correctly
     set:
