--- a/deploy/charts/airlock-microgateway/values.yaml
+++ b/deploy/charts/airlock-microgateway/values.yaml
@@ -26,10 +26,10 @@ operator:
     # -- Image repository from which to pull the Airlock Microgateway Operator image.
     repository: "quay.io/airlock/microgateway-operator"
     # -- Image tag to pull.
-    tag: "4.3.4"
+    tag: "4.4.0"
     # -- SHA256 image digest to pull (in the format "sha256:c79ee3f85862fb386e9dd62b901b607161d27807f512d7fbdece05e9ee3d7c63").
     # Overrides tag when specified.
-    digest: "sha256:6819c78d5570de66edce6c13964c6e1b4cc4746d0c0bc6f4975cd38e324828c0"
+    digest: "sha256:80cbae58ad9badd9395fa09a7b0576561821121b8353146bbd6efa2240ab5d97"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Annotations to add to all Pods.
@@ -103,16 +103,23 @@ operator:
     # -- Labels to add to the ServiceMonitor.
     labels: {}
     # release: "<prometheus-operator-release>"
+  # Configures the Kubernetes Gateway API integration.
+  gatewayAPI:
+    # -- Whether to enable the Kubernetes Gateway API related controllers.
+    # Requires that the gateway.networking.k8s.io/v1 resources are installed on the cluster.
+    enabled: false
+    # -- Controller name referred in the GatewayClasses managed by this operator. The value must be a path prefixed by the domain `microgateway.airlock.com`.
+    controllerName: microgateway.airlock.com/gatewayclass-controller
 engine:
   # Specifies the Airlock Microgateway Engine image.
   image:
     # -- Image repository from which to pull the Airlock Microgateway Engine image.
     repository: "quay.io/airlock/microgateway-engine"
     # -- Image tag to pull.
-    tag: "4.3.4"
+    tag: "4.4.0"
     # -- SHA256 image digest to pull (in the format "sha256:a3051f42d3013813b05f7513bb86ed6a3209cb3003f1bb2f7b72df249aa544d3").
     # Overrides tag when specified.
-    digest: "sha256:91e05c509bed3b51ff4888d7475980d56cbc85db121aa766d1bde413204f9070"
+    digest: "sha256:c29adf07e7536b72447ea694d0e19fe19235306c26d412a9abc43e4dd99b84c8"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Resource restrictions to apply to the Airlock Microgateway Engine container.
@@ -141,21 +148,29 @@ networkValidator:
     repository: "cgr.dev/chainguard/netcat"
     # -- Image tag to pull.
     tag: ""
-    # -- SHA256 image digest to pull (in the format "sha256:7a73d4b82a2d4165bbc5efa55de4fee9d43f2b1c1edb3505cdc8afd1361bad9b").
+    # -- SHA256 image digest to pull (in the format "sha256:05585644690678ae6453ab12e3a5f899e7be5ab70f56c6bf1c4484d3b53587d2").
     # Overrides tag when specified.
-    digest: "sha256:7a73d4b82a2d4165bbc5efa55de4fee9d43f2b1c1edb3505cdc8afd1361bad9b"
+    digest: "sha256:05585644690678ae6453ab12e3a5f899e7be5ab70f56c6bf1c4484d3b53587d2"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
+  # -- Resource restrictions to apply to the Airlock Microgateway Network Validator init-container.
+  resources:
+    limits:
+      cpu: 25m
+      memory: 12Mi
+    requests:
+      cpu: 5m
+      memory: 1Mi
 sessionAgent:
   # Specifies the Airlock Microgateway Session Agent image.
   image:
     # -- Image repository from which to pull the Airlock Microgateway Session Agent image.
     repository: "quay.io/airlock/microgateway-session-agent"
     # -- Image tag to pull.
-    tag: "4.3.4"
+    tag: "4.4.0"
     # -- SHA256 image digest to pull (in the format "sha256:a3051f42d3013813b05f7513bb86ed6a3209cb3003f1bb2f7b72df249aa544d3").
     # Overrides tag when specified.
-    digest: "sha256:df4e50d0929cb4c5e4486452979b59ec17f5e49a1516b685acd3a1ab0ddb3cf4"
+    digest: "sha256:fbb90f2a52bb1b19cca6c5c133e80331153c019ec905db052c250fedbb09c3bc"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Resource restrictions to apply to the Airlock Microgateway Session Agent container.
@@ -204,6 +219,15 @@ dashboards:
       create: true
     blockLogs:
       # -- Whether to create the block logs dashboard.
+      create: true
+    headerLogs:
+      # -- Whether to create the header rewrite logs dashboard.
+      create: true
+    logOnlyMetrics:
+      # -- Whether to create the log only metrics dashboard
+      create: true
+    logOnlyLogs:
+      # -- Whether to create the log only logs dashboard.
       create: true
 # Check whether the installation of the Airlock Microgateway Helm Chart was successful.
 # Requires a secret with a valid Airlock Microgateway license key already to be present.
