CHG: Sync Artifacts - 4.4.2

--- a/deploy/charts/airlock-microgateway-cni/templates/clusterrole.yaml
+++ b/deploy/charts/airlock-microgateway-cni/templates/clusterrole.yaml
@@ -19,4 +19,7 @@ rules:
       - list
       - watch
       - patch
+    {{- if eq .Values.config.repairMode "deletePods" }}
+      - delete
+    {{- end }}
 {{- end -}}
