--- a/deploy/charts/airlock-microgateway-cni/values.yaml
+++ b/deploy/charts/airlock-microgateway-cni/values.yaml
@@ -15,10 +15,10 @@ image:
   # -- Image repository from which to pull the Airlock Microgateway CNI image.
   repository: "quay.io/airlock/microgateway-cni"
   # -- Image tag to pull.
-  tag: "4.4.1"
+  tag: "4.4.2"
   # -- SHA256 image digest to pull (in the format "sha256:7144f7bab3d4c2648d7e59409f15ec52a18006a128c733fcff20d3a4a54ba44a").
   # Overrides tag when specified.
-  digest: "sha256:fa2f5d8587024f0d0b29505204c964002cfd7facf79748ccc98b8caf1a70f0d8"
+  digest: "sha256:160407ca4790555afc8ea706f51bc0729c1a79862c295ad9df68999692b932a5"
   # -- Pull policy for this image.
   pullPolicy: IfNotPresent
 # -- Annotations to add to all Pods.
@@ -66,6 +66,15 @@ config:
   # as a `standalone` plugin (required for use with Multus CNI, e.g. on OpenShift)
   # or in `manual` mode, where no CNI network configuration is written.
   installMode: "chained"
+  # -- Specifies the repair mode
+  # There is a race condition regarding the installation of the CNI Plugin and creation of Pods when starting a Node.
+  # This would cause Pods to be unprotected, because the CNI did not reconfigure the Pod's network.
+  # The Airlock Microgateway Network Validator prevents this and causes the Pod to fail on purpose.
+  # Pods can be repaired by choosing the appropriate repair mode.
+  # Available options are:
+  # `deletePods` will delete failing Pods, such that the CNI Plugin can correctly configure them
+  # `none` will not perform any action for failing Pods
+  repairMode: "none"
   # -- Log level for the CNI installer and plugin.
   logLevel: info
   # -- Directory where the CNI config files reside on the host.
