CHG: Sync Artifacts - 4.6.0

--- a/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-dashboard-accessctrllogs_v1_configmap.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-dashboard-accessctrllogs_v1_configmap.yaml
@@ -10,6 +10,14 @@ data:
           "type": "datasource",
           "pluginId": "loki",
           "pluginName": "Loki"
+        },
+        {
+          "name": "DS_PROMETHEUS",
+          "label": "Prometheus",
+          "description": "",
+          "type": "datasource",
+          "pluginId": "prometheus",
+          "pluginName": "Prometheus"
         }
       ],
       "__elements": {},
@@ -302,7 +310,7 @@ data:
                 "uid": "${DS_LOKI}"
               },
               "editorMode": "code",
-              "expr": "{container=\"airlock-microgateway-engine\"}  |= \"access_control\" |= \"envoy.access\"  | json http_method=\"http.request.method\", url=\"url.path\", domain=\"url.domain\", request_size=\"http.request.bytes\", client_ip=\"network.forwarded_ip\", request_id=\"http.request.id\", user_id=\"airlock.access_control.user_id\",  details=\"airlock.access_control.details\", policy=\"airlock.access_control.policy\", status=\"airlock.access_control.status\", authenticated=\"airlock.access_control.authenticated\", response_code=\"http.response.status_code\", authorized=\"airlock.access_control.authorized\", log_type=\"event.dataset\" | log_type = `envoy.access`",
+              "expr": "{container=\"airlock-microgateway-engine\", pod=~\"${gateway_pod:regex}\"}  |= \"access_control\" |= \"envoy.access\"  | json http_method=\"http.request.method\", url=\"url.path\", domain=\"url.domain\", request_size=\"http.request.bytes\", client_ip=\"network.forwarded_ip\", request_id=\"http.request.id\", user_id=\"airlock.access_control.user_id\",  details=\"airlock.access_control.details\", policy=\"airlock.access_control.policy\", status=\"airlock.access_control.status\", authenticated=\"airlock.access_control.authenticated\", response_code=\"http.response.status_code\", authorized=\"airlock.access_control.authorized\", log_type=\"event.dataset\" | log_type = `envoy.access`",
               "hide": false,
               "queryType": "range",
               "refId": "Access Control Logs"
@@ -412,29 +420,6 @@ data:
             "type": "datasource"
           },
           {
-            "allValue": ".*",
-            "current": {},
-            "datasource": {
-              "type": "prometheus",
-              "uid": "${DS_PROMETHEUS}"
-            },
-            "definition": "label_values(microgateway_license_http_rq_total,namespace)",
-            "includeAll": true,
-            "label": "Gateway Namespace",
-            "multi": true,
-            "name": "namespace",
-            "options": [],
-            "query": {
-              "qryType": 1,
-              "query": "label_values(microgateway_license_http_rq_total,namespace)",
-              "refId": "PrometheusVariableQueryEditor-VariableQuery"
-            },
-            "refresh": 2,
-            "regex": "",
-            "sort": 5,
-            "type": "query"
-          },
-          {
             "current": {},
             "hide": 2,
             "includeAll": false,
@@ -445,6 +430,119 @@ data:
             "refresh": 1,
             "regex": "",
             "type": "datasource"
+          },
+          {
+            "current": {},
+            "datasource": {
+              "type": "prometheus",
+              "uid": "${DS_PROMETHEUS}"
+            },
+            "definition": "label_values(microgateway_build_info,gateway_kind)",
+            "description": "Allows filtering on the gateway kind.",
+            "includeAll": true,
+            "label": "Gateway Kind",
+            "name": "gateway_kind",
+            "options": [],
+            "query": {
+              "qryType": 1,
+              "query": "label_values(microgateway_build_info,gateway_kind)",
+              "refId": "PrometheusVariableQueryEditor-VariableQuery"
+            },
+            "refresh": 1,
+            "regex": "",
+            "type": "query"
+          },
+          {
+            "allValue": ".+",
+            "description" : "Allows filtering on the managing operator instance.",
+            "current": {},
+            "datasource": {
+              "type": "prometheus",
+              "uid": "${DS_PROMETHEUS}"
+            },
+            "definition": "label_values(microgateway_build_info,managed_by)",
+            "includeAll": true,
+            "label": "Microgateway Operator",
+            "multi": true,
+            "name": "operator",
+            "options": [],
+            "query": {
+              "qryType": 1,
+              "query": "label_values(microgateway_build_info,managed_by)",
+              "refId": "PrometheusVariableQueryEditor-VariableQuery"
+            },
+            "refresh": 2,
+            "regex": ".*",
+            "type": "query"
+          },
+          {
+            "allValue": ".+",
+            "current": {},
+            "description" : "Allows filtering on the namespaces in which gateways are deployed.",
+            "datasource": {
+              "type": "prometheus",
+              "uid": "${DS_PROMETHEUS}"
+            },
+            "definition": "label_values(microgateway_build_info{managed_by=~\"$operator\"},namespace)",
+            "includeAll": true,
+            "label": "Gateway Namespace",
+            "multi": true,
+            "name": "namespace",
+            "options": [],
+            "query": {
+              "qryType": 1,
+              "query": "label_values(microgateway_build_info{managed_by=~\"$operator\"},namespace)",
+              "refId": "PrometheusVariableQueryEditor-VariableQuery"
+            },
+            "refresh": 2,
+            "regex": "",
+            "type": "query"
+          },
+          {
+            "current": {},
+            "datasource": {
+              "type": "prometheus",
+              "uid": "${DS_PROMETHEUS}"
+            },
+            "description" : "Allows filtering on specific gateway instance names within the selected namespaces.",
+            "definition": "label_values(microgateway_build_info{managed_by=~\"$operator\", namespace=~\"$namespace\", gateway_kind=~\"$gateway_kind\"},gateway)",
+            "includeAll": true,
+            "label": "Gateway Name",
+            "multi": true,
+            "name": "gateway_name",
+            "options": [],
+            "query": {
+              "qryType": 1,
+              "query": "label_values(microgateway_build_info{managed_by=~\"$operator\", namespace=~\"$namespace\", gateway_kind=~\"$gateway_kind\"},gateway)",
+              "refId": "PrometheusVariableQueryEditor-VariableQuery"
+            },
+            "refresh": 2,
+            "regex": "",
+            "sort": 1,
+            "type": "query"
+          },
+          {
+            "allowCustomValue": false,
+            "current": {},
+            "datasource": {
+              "type": "prometheus",
+              "uid": "${DS_PROMETHEUS}"
+            },
+            "definition": "label_values(microgateway_build_info{managed_by=~\"$operator\", namespace=~\"$namespace\", gateway_kind=~\"$gateway_kind\", gateway=~\"$gateway_name\"},pod)",
+            "hide": 2,
+            "includeAll": true,
+            "label": "Gateway Pod",
+            "multi": true,
+            "name": "gateway_pod",
+            "options": [],
+            "query": {
+              "qryType": 1,
+              "query": "label_values(microgateway_build_info{managed_by=~\"$operator\", namespace=~\"$namespace\", gateway_kind=~\"$gateway_kind\", gateway=~\"$gateway_name\"},pod)",
+              "refId": "PrometheusVariableQueryEditor-VariableQuery"
+            },
+            "refresh": 2,
+            "regex": "",
+            "type": "query"
           }
         ]
       },
@@ -468,6 +566,6 @@ metadata:
     app.kubernetes.io/instance: airlock-microgateway
     app.kubernetes.io/name: microgateway-operator
     app.kubernetes.io/part-of: microgateway
-    app.kubernetes.io/version: 4.5.3
+    app.kubernetes.io/version: 4.6.0
     grafana_dashboard: "1"
   name: airlock-microgateway-dashboard-accessctrllogs
