--- a/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-operator-config_v1_configmap.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/airlock-microgateway-operator-config_v1_configmap.yaml
@@ -2,6 +2,15 @@ apiVersion: v1
 data:
   engine_bootstrap_config_template.yaml: |
     # Base configuration, admin interface on port 19000
+    layered_runtime:
+      layers:
+        - name: static_layer
+          static_layer:
+            # disable the new JSON formatter as it is not omitting empty fields
+            # see https://github.com/envoyproxy/envoy/issues/37941
+            envoy.reloadable_features.logging_with_fast_json_formatter: false
+            # disable the new http2 codec
+            envoy.reloadable_features.http2_use_oghttp2: false
     admin:
       address:
         socket_address:
@@ -403,5 +412,5 @@ metadata:
     app.kubernetes.io/instance: airlock-microgateway
     app.kubernetes.io/name: microgateway-operator
     app.kubernetes.io/part-of: microgateway
-    app.kubernetes.io/version: 4.5.3
+    app.kubernetes.io/version: 4.6.0
   name: airlock-microgateway-operator-config
