--- a/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_accesscontrolpolicies.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_accesscontrolpolicies.yaml
@@ -2,11 +2,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.17.1
+    controller-gen.kubebuilder.io/version: v0.18.0
   creationTimestamp: null
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.5.3
+    app.kubernetes.io/version: 4.6.0
     gateway.networking.k8s.io/policy: direct
   name: accesscontrolpolicies.microgateway.airlock.com
 spec:
@@ -63,6 +63,24 @@ spec:
                           description: Authentication specifies that clients need
                             to be authenticated with the provided method.
                           properties:
+                            jwt:
+                              description: JWT configures client authentication using
+                                JWT.
+                              properties:
+                                jwtRef:
+                                  description: JWTRef selects the JWT configuration
+                                    to apply.
+                                  properties:
+                                    name:
+                                      description: Name of the resource
+                                      minLength: 1
+                                      type: string
+                                  required:
+                                  - name
+                                  type: object
+                              required:
+                              - jwtRef
+                              type: object
                             oidc:
                               description: OIDC configures client authentication using
                                 OpenID Connect.
@@ -128,6 +146,78 @@ spec:
                             all be satisfied for the request to be authorized.
                           items:
                             properties:
+                              jwt:
+                                description: JWT specifies a condition on the JWT.
+                                properties:
+                                  claim:
+                                    description: Claim specifies a condition on a
+                                      JWT claim.
+                                    properties:
+                                      name:
+                                        description: Name of the claim.
+                                        minLength: 1
+                                        type: string
+                                      value:
+                                        description: |-
+                                          Value of the claim. If not specified, only existence of the claim is checked (any value is allowed).
+
+                                          Value matching is only supported if the data type of the claim is either primitive (`number`, `boolean`, `string`) or `array` of primitives.
+                                          In case of a non-string value, the match will be performed against the stringified value.
+
+                                          If the claim has an unsupported data type (e.g. `object` or `null`), its value will never match.
+                                        properties:
+                                          matcher:
+                                            description: StringMatcher defines the
+                                              way to match a string.
+                                            properties:
+                                              contains:
+                                                description: |-
+                                                  Contains defines a substring match on the substring specified here. Empty contains match is not allowed, please use regex instead.
+                                                  Only one of exact, prefix, suffix, regex or contains can be set.
+                                                minLength: 1
+                                                type: string
+                                              exact:
+                                                description: |-
+                                                  Exact defines an explicit match on the string specified here.
+                                                  Only one of exact, prefix, suffix, regex or contains can be set.
+                                                minLength: 1
+                                                type: string
+                                              ignoreCase:
+                                                default: false
+                                                description: IgnoreCase indicates
+                                                  whether the matching should be case-insensitive.
+                                                  In case of a regex match, the regex
+                                                  gets wrapped with a group `(?i:...)`.
+                                                type: boolean
+                                              prefix:
+                                                description: |-
+                                                  Prefix defines a prefix match on the prefix specified here. Empty prefix is not allowed, please use regex instead.
+                                                  Only one of exact, prefix, suffix, regex or contains can be set.
+                                                minLength: 1
+                                                type: string
+                                              regex:
+                                                description: |-
+                                                  Regex defines a regex match on the regular expression specified here. Google's [RE2 regex engine](https://github.com/google/re2/wiki/Syntax) is used.
+                                                  The regex matches only single-line by default, even with ".*". To match a multi-line string prepend (?s) to your regex.
+                                                  Only one of exact, prefix, suffix, regex or contains can be set.
+                                                minLength: 1
+                                                type: string
+                                              suffix:
+                                                description: |-
+                                                  Suffix defines a suffix match on the suffix specified here. Empty suffix is not allowed, please use regex instead.
+                                                  Only one of exact, prefix, suffix, regex or contains can be set.
+                                                minLength: 1
+                                                type: string
+                                            type: object
+                                        required:
+                                        - matcher
+                                        type: object
+                                    required:
+                                    - name
+                                    type: object
+                                required:
+                                - claim
+                                type: object
                               oidc:
                                 description: OIDC specifies a condition on the result
                                   of an OpenID Connect flow.
@@ -201,8 +291,6 @@ spec:
                                 required:
                                 - claim
                                 type: object
-                            required:
-                            - oidc
                             type: object
                           minItems: 1
                           type: array
@@ -211,6 +299,78 @@ spec:
                             least one must be satisfied for the request to be authorized.
                           items:
                             properties:
+                              jwt:
+                                description: JWT specifies a condition on the JWT.
+                                properties:
+                                  claim:
+                                    description: Claim specifies a condition on a
+                                      JWT claim.
+                                    properties:
+                                      name:
+                                        description: Name of the claim.
+                                        minLength: 1
+                                        type: string
+                                      value:
+                                        description: |-
+                                          Value of the claim. If not specified, only existence of the claim is checked (any value is allowed).
+
+                                          Value matching is only supported if the data type of the claim is either primitive (`number`, `boolean`, `string`) or `array` of primitives.
+                                          In case of a non-string value, the match will be performed against the stringified value.
+
+                                          If the claim has an unsupported data type (e.g. `object` or `null`), its value will never match.
+                                        properties:
+                                          matcher:
+                                            description: StringMatcher defines the
+                                              way to match a string.
+                                            properties:
+                                              contains:
+                                                description: |-
+                                                  Contains defines a substring match on the substring specified here. Empty contains match is not allowed, please use regex instead.
+                                                  Only one of exact, prefix, suffix, regex or contains can be set.
+                                                minLength: 1
+                                                type: string
+                                              exact:
+                                                description: |-
+                                                  Exact defines an explicit match on the string specified here.
+                                                  Only one of exact, prefix, suffix, regex or contains can be set.
+                                                minLength: 1
+                                                type: string
+                                              ignoreCase:
+                                                default: false
+                                                description: IgnoreCase indicates
+                                                  whether the matching should be case-insensitive.
+                                                  In case of a regex match, the regex
+                                                  gets wrapped with a group `(?i:...)`.
+                                                type: boolean
+                                              prefix:
+                                                description: |-
+                                                  Prefix defines a prefix match on the prefix specified here. Empty prefix is not allowed, please use regex instead.
+                                                  Only one of exact, prefix, suffix, regex or contains can be set.
+                                                minLength: 1
+                                                type: string
+                                              regex:
+                                                description: |-
+                                                  Regex defines a regex match on the regular expression specified here. Google's [RE2 regex engine](https://github.com/google/re2/wiki/Syntax) is used.
+                                                  The regex matches only single-line by default, even with ".*". To match a multi-line string prepend (?s) to your regex.
+                                                  Only one of exact, prefix, suffix, regex or contains can be set.
+                                                minLength: 1
+                                                type: string
+                                              suffix:
+                                                description: |-
+                                                  Suffix defines a suffix match on the suffix specified here. Empty suffix is not allowed, please use regex instead.
+                                                  Only one of exact, prefix, suffix, regex or contains can be set.
+                                                minLength: 1
+                                                type: string
+                                            type: object
+                                        required:
+                                        - matcher
+                                        type: object
+                                    required:
+                                    - name
+                                    type: object
+                                required:
+                                - claim
+                                type: object
                               oidc:
                                 description: OIDC specifies a condition on the result
                                   of an OpenID Connect flow.
@@ -284,8 +444,6 @@ spec:
                                 required:
                                 - claim
                                 type: object
-                            required:
-                            - oidc
                             type: object
                           minItems: 1
                           type: array
@@ -563,6 +721,45 @@ spec:
                           required:
                           - cidrRanges
                           type: object
+                      type: object
+                    tokenExchange:
+                      description: TokenExchange configures how downstream authentication
+                        tokens (e.g. JWT or OIDC Access Token) are exchanged with
+                        an OAuth2 Token Exchange Server.
+                      properties:
+                        actions:
+                          description: Actions specifies the chain of token exchange
+                            actions to execute.
+                          items:
+                            properties:
+                              tokenExchangeRef:
+                                description: TokenExchangeRef selects a TokenExchange
+                                  to perform.
+                                properties:
+                                  name:
+                                    description: Name of the resource
+                                    minLength: 1
+                                    type: string
+                                required:
+                                - name
+                                type: object
+                            required:
+                            - tokenExchangeRef
+                            type: object
+                          minItems: 1
+                          type: array
+                        onFailure:
+                          default: Block
+                          description: |-
+                            OnFailure configures what should happen, if the token exchange fails. Meaning of the possible values:
+                            _Block_: The downstream request is blocked.
+                            _Pass_: Processing of the downstream request will proceed, but no exchanged token will be available (e.g. for identity propagation).
+                          enum:
+                          - Block
+                          - Pass
+                          type: string
+                      required:
+                      - actions
                       type: object
                   required:
                   - authorization
