--- a/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_identitypropagations.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_identitypropagations.yaml
@@ -2,11 +2,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.17.1
+    controller-gen.kubebuilder.io/version: v0.18.0
   creationTimestamp: null
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.5.3
+    app.kubernetes.io/version: 4.6.0
   name: identitypropagations.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -55,6 +55,15 @@ spec:
                   source:
                     description: Source from which to extract the token.
                     properties:
+                      jwt:
+                        description: JWT specifies to extract a value from a JWT.
+                        properties:
+                          claim:
+                            description: The JWT claim to extract as value. If omitted,
+                              the entire JWT will be used as value.
+                            minLength: 1
+                            type: string
+                        type: object
                       metadata:
                         description: Metadata specifies to extract a value from an
                           Envoy dynamic filter metadata key.
@@ -94,6 +103,10 @@ spec:
                             - claim
                             type: object
                         type: object
+                      tokenExchange:
+                        description: TokenExchange specifies to use the token obtained
+                          via token exchange as value.
+                        type: object
                     type: object
                 required:
                 - source
@@ -112,6 +125,15 @@ spec:
                       source:
                         description: Source from which to extract the value.
                         properties:
+                          jwt:
+                            description: JWT specifies to extract a value from a JWT.
+                            properties:
+                              claim:
+                                description: The JWT claim to extract as value. If
+                                  omitted, the entire JWT will be used as value.
+                                minLength: 1
+                                type: string
+                            type: object
                           metadata:
                             description: Metadata specifies to extract a value from
                               an Envoy dynamic filter metadata key.
@@ -151,6 +173,10 @@ spec:
                                 required:
                                 - claim
                                 type: object
+                            type: object
+                          tokenExchange:
+                            description: TokenExchange specifies to use the token
+                              obtained via token exchange as value.
                             type: object
                         type: object
                     required:
