--- a/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_oidcproviders.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_oidcproviders.yaml
@@ -2,11 +2,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.17.1
+    controller-gen.kubebuilder.io/version: v0.18.0
   creationTimestamp: null
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.5.3
+    app.kubernetes.io/version: 4.6.0
   name: oidcproviders.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -607,7 +607,7 @@ spec:
                                   environments.
                                 type: object
                               jwksRef:
-                                description: JwksRef specifies the JWKS to use for
+                                description: JWKSRef specifies the JWKS to use for
                                   verifying the JWT signature (usually provided by
                                   the OpenID Provider).
                                 properties:
