--- a/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_oidcrelyingparties.yaml
+++ b/deploy/bundles/airlock-microgateway/manifests/microgateway.airlock.com_oidcrelyingparties.yaml
@@ -2,11 +2,11 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.17.1
+    controller-gen.kubebuilder.io/version: v0.18.0
   creationTimestamp: null
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.5.3
+    app.kubernetes.io/version: 4.6.0
   name: oidcrelyingparties.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -229,6 +229,7 @@ spec:
                   Note: Different OIDCRelyingParties which use the same OIDC Provider and Client ID must request the same scopes for now.
                 items:
                   minLength: 1
+                  pattern: ^\S+$
                   type: string
                 type: array
             required:
