--- a/deploy/charts/airlock-microgateway-cni/Chart.yaml
+++ b/deploy/charts/airlock-microgateway-cni/Chart.yaml
@@ -3,16 +3,16 @@ name: microgateway-cni
 description: A Helm chart for deploying the Airlock Microgateway CNI plugin
 type: application
 home: https://www.airlock.com/en/microgateway
-version: "4.5.3"
-appVersion: "4.5.3"
+version: "4.6.0"
+appVersion: "4.6.0"
 annotations:
   charts.openshift.io/name: Airlock Microgateway CNI
   artifacthub.io/category: security
   artifacthub.io/links: |
     - name: Airlock Microgateway Documentation
-      url: https://docs.airlock.com/microgateway/4.5/
+      url: https://docs.airlock.com/microgateway/4.6/
     - name: Airlock Microgateway Labs
-      url: https://play.instruqt.com/airlock/invite/hyi9fy4b4jzc?icp_referrer=artifacthub.io
+      url: https://airlock.instruqt.com/pages/airlock-microgateway-labs
     - name: Airlock Microgateway Forum
       url: https://forum.airlock.com/
   artifacthub.io/license: MIT
