--- a/deploy/charts/airlock-microgateway/crds/identitypropagations.microgateway.airlock.com.yaml
+++ b/deploy/charts/airlock-microgateway/crds/identitypropagations.microgateway.airlock.com.yaml
@@ -2,10 +2,10 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.17.1
+    controller-gen.kubebuilder.io/version: v0.18.0
   labels:
     app.kubernetes.io/name: airlock-microgateway-operator
-    app.kubernetes.io/version: 4.5.3
+    app.kubernetes.io/version: 4.6.0
   name: identitypropagations.microgateway.airlock.com
 spec:
   group: microgateway.airlock.com
@@ -53,6 +53,14 @@ spec:
                     source:
                       description: Source from which to extract the token.
                       properties:
+                        jwt:
+                          description: JWT specifies to extract a value from a JWT.
+                          properties:
+                            claim:
+                              description: The JWT claim to extract as value. If omitted, the entire JWT will be used as value.
+                              minLength: 1
+                              type: string
+                          type: object
                         metadata:
                           description: Metadata specifies to extract a value from an Envoy dynamic filter metadata key.
                           properties:
@@ -85,6 +93,9 @@ spec:
                                 - claim
                               type: object
                           type: object
+                        tokenExchange:
+                          description: TokenExchange specifies to use the token obtained via token exchange as value.
+                          type: object
                       type: object
                   required:
                     - source
@@ -102,6 +113,14 @@ spec:
                         source:
                           description: Source from which to extract the value.
                           properties:
+                            jwt:
+                              description: JWT specifies to extract a value from a JWT.
+                              properties:
+                                claim:
+                                  description: The JWT claim to extract as value. If omitted, the entire JWT will be used as value.
+                                  minLength: 1
+                                  type: string
+                              type: object
                             metadata:
                               description: Metadata specifies to extract a value from an Envoy dynamic filter metadata key.
                               properties:
@@ -133,6 +152,9 @@ spec:
                                   required:
                                     - claim
                                   type: object
+                              type: object
+                            tokenExchange:
+                              description: TokenExchange specifies to use the token obtained via token exchange as value.
                               type: object
                           type: object
                       required:
