--- a/deploy/charts/airlock-microgateway/values.yaml
+++ b/deploy/charts/airlock-microgateway/values.yaml
@@ -26,10 +26,10 @@ operator:
     # -- Image repository from which to pull the Airlock Microgateway Operator image.
     repository: "quay.io/airlock/microgateway-operator"
     # -- Image tag to pull.
-    tag: "4.5.3"
+    tag: "4.6.0"
     # -- SHA256 image digest to pull (in the format "sha256:c79ee3f85862fb386e9dd62b901b607161d27807f512d7fbdece05e9ee3d7c63").
     # Overrides tag when specified.
-    digest: "sha256:e867b33757d5c2b41ee32bd44df66fdc028a7caef52349297390e6c1c4779258"
+    digest: "sha256:cdfb8ae58956ae4c8198b92da12c333df1a0ff8e13694fbb61bb5c4a539b963d"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Annotations to add to all Pods.
@@ -127,10 +127,10 @@ engine:
     # -- Image repository from which to pull the Airlock Microgateway Engine image.
     repository: "quay.io/airlock/microgateway-engine"
     # -- Image tag to pull.
-    tag: "4.5.3"
+    tag: "4.6.0"
     # -- SHA256 image digest to pull (in the format "sha256:a3051f42d3013813b05f7513bb86ed6a3209cb3003f1bb2f7b72df249aa544d3").
     # Overrides tag when specified.
-    digest: "sha256:749b3f985a6c8ad1b912b87e582c462d03768b250f9dc38c85e1944bdc42782f"
+    digest: "sha256:b9a2d0147bf9c9890f0ee4c292f4fafc1c1a1d3578dec123e3ce8d7c285bbaed"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Resource restrictions to apply to the Airlock Microgateway Engine container.
@@ -169,10 +169,10 @@ sessionAgent:
     # -- Image repository from which to pull the Airlock Microgateway Session Agent image.
     repository: "quay.io/airlock/microgateway-session-agent"
     # -- Image tag to pull.
-    tag: "4.5.3"
+    tag: "4.6.0"
     # -- SHA256 image digest to pull (in the format "sha256:a3051f42d3013813b05f7513bb86ed6a3209cb3003f1bb2f7b72df249aa544d3").
     # Overrides tag when specified.
-    digest: "sha256:7e73bc131d0a5b820b59ba1d6d41019690fe2474b696acac2fbdb4928be81e5d"
+    digest: "sha256:6eaa497195b742384b309ca656654695de3e06f5f9bc38c496317120b0b27695"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Resource restrictions to apply to the Airlock Microgateway Session Agent container.
@@ -236,6 +236,15 @@ dashboards:
       create: true
     accessCtrlLogs:
       # -- Whether to create the access control logs dashboard.
+      create: true
+    systemMetrics:
+      # -- Whether to create the system metrics dashboard.
+      create: true
+    upstreamMetrics:
+      # -- Whether to create the upstream metrics dashboard.
+      create: true
+    downstreamMetrics:
+      # -- Whether to create the downstream metrics dashboard.
       create: true
 # Check whether the installation of the Airlock Microgateway Helm Chart was successful.
 # Requires a secret with a valid Airlock Microgateway license key already to be present.
